--- a/MoviesDB/src/styles.css
+++ b/MoviesDB/src/styles.css
@@ -5,8 +5,9 @@
     box-sizing: border-box;
 }
 
-body{
-    font-family: 'Ubuntu', sans-serif;
-    background-color: black;
+body {
+    font-family: 'ubuntu', sans-serif;
+    background-color: #000;
     overflow-x: hidden;
 }
+
