Criado a página de detalhes dos Filmes, séries e animações.

--- a/MoviesDB/src/app/pages/home/home.component.html
+++ b/MoviesDB/src/app/pages/home/home.component.html
@@ -2,8 +2,11 @@
     <div id="carouselBanner" class="carousel slide caroulsel-fade" data-bs-ride="carousel">
 
         <div class="carousel-inner">
+
             <div class="carousel-item" *ngFor="let b of bannerResults; let i = index" [ngClass]="{active:i===0}" dat-bs-interval="8000">
-                <img src="https://image.tmdb.org/t/p/original/{{ b.backdrop_path }}" class="d-block w-100 opacity-75" alt="Capa de mídia">
+                <img src="https://image.tmdb.org/t/p/original/{{ b.backdrop_path }}" 
+                class="d-block w-100 opacity-75" alt="Capa de mídia"
+                routerLink="/details/{{b.media_type}}/{{b.id}}">
                 <div class="carousel-caption">
                     <h3>{{ b.title ?? b.name }}</h3>
                     <p>{{ b.overview }}</p>
@@ -26,7 +29,7 @@
     <div class="row mb-5">
         <h4 class="text-white">Filmes em Destaque</h4>
         <div class="rowposter mt-1" #trendingMovies autoScroll>
-            <a href="#" *ngFor="let m of trendingMovieResults">
+            <a routerLink="/details/{{m.media_type}}/{{m.id}}" *ngFor="let m of trendingMovieResults">
                 <img src="https://image.tmdb.org/t/p/w500/{{ m.poster_path }}" alt="Capa de Filmes">          
             </a>
         </div>
@@ -36,7 +39,7 @@
     <div class="row mb-5">
         <h4 class="text-white">Séries em Destaque</h4>
         <div class="rowposter mt-1" #trendingSeries autoScroll>
-            <a href="#" *ngFor="let m of trendingSerieResults">
+            <a routerLink="/details/{{m.media_type}}/{{m.id}}" *ngFor="let m of trendingSerieResults">
                 <img src="https://image.tmdb.org/t/p/w500/{{ m.poster_path }}" alt="Capa de Series">          
             </a>
         </div>
@@ -46,7 +49,7 @@
     <div class="row mb-5">
         <h4 class="text-white">Filmes de ação mais populares</h4>
         <div class="rowposter mt-1" #popularActionMovie autoScroll>
-            <a href="#" *ngFor="let m of popularActionMovieResults">
+            <a routerLink="/details/movie/{{m.id}}" *ngFor="let m of popularActionMovieResults">
                 <img src="https://image.tmdb.org/t/p/w500/{{ m.poster_path }}" alt="Capa de Series">          
             </a>
         </div>
@@ -56,7 +59,7 @@
     <div class="row mb-5">
         <h4 class="text-white">Filmes de Animação em Destaque</h4>
         <div class="rowposter mt-1" #trendingAnimationMovie autoScroll>
-            <a href="#" *ngFor="let m of trendingAnimationMovieResults">
+            <a routerLink="/details/movie/{{m.id}}" *ngFor="let m of trendingAnimationMovieResults">
                 <img src="https://image.tmdb.org/t/p/w500/{{ m.poster_path }}" alt="Capa de filmes de animação">          
             </a>
         </div>
@@ -66,9 +69,9 @@
     <div class="row mb-5">
         <h4 class="text-white">Séries de Animação em Destaque</h4>
         <div class="rowposter mt-1" #trendingAnimationSerie autoScroll>
-            <a href="#" *ngFor="let m of trendingAnimationSerieResults">
+            <a routerLink="/details/tv/{{m.id}}" *ngFor="let m of trendingAnimationSerieResults">
                 <img src="https://image.tmdb.org/t/p/w500/{{ m.poster_path }}" alt="Capa de Series de animação">          
             </a>
         </div>
     </div>    
-</div>
+</div> 
