--- a/MoviesDB/src/app/pages/home/home.component.css
+++ b/MoviesDB/src/app/pages/home/home.component.css
@@ -5,6 +5,7 @@
 #carouselBanner .carousel-item img {
     height: 100vh;
     object-fit: cover;
+    cursor: pointer;
 }
 
 .carousel-inner .carousel-caption {
