--- a/MoviesDB/src/app/pages/details/details.component.html
+++ b/MoviesDB/src/app/pages/details/details.component.html
@@ -52,7 +52,7 @@
         <div class="card" routerLink="/person/{{c.id}}">
           <img class="card-img-top" alt="{{c.original_name}}"
           [src]="c.profile_path ? 'https://image.tmdb.org/t/p/w500/' + c.profile_path : '/img/no-photo-cast.png' " >
-          <div class="card-body">
+          <div class="card-body text-center">
             <h5 class="card-title">{{c.original_name}}</h5>
             <p class="card-text">{{c.character}}</p>
           </div>
